--- a/_posts/2021-09-05-git-memo.md
+++ b/_posts/2021-09-05-git-memo.md
@@ -19,8 +19,6 @@ date: 2021-09-05 10:50:00
 git branch -a
 ```
 
-
-
 提交修改记录
 
 ```bash
@@ -29,15 +27,11 @@ git commit -m "fix typo"
 git push origin main  # main意指将修改提交到远程main分支
 ```
 
-
-
 切换分支
 
 ```bash
 git checkout dev  # 切换到dev分支
 ```
-
-
 
 删除分支
 
@@ -46,7 +40,17 @@ git branch -d dev  # 删除本地dev分支
 git push origin --delete dev  # 删除远程dev分支
 ```
 
+撤销本地commit
 
+```bash
+git reset --soft HEAD^
+```
+
+撤销本地add
+
+```bash
+git reset HEAD .
+```
 
 ## 学习资源
 
