--- a/_posts/2021-11-13-tf-memo.md
+++ b/_posts/2021-11-13-tf-memo.md
@@ -1,14 +1,12 @@
 ---
-title: Tensorflow Memo
+title: [MEMO] Tensorflow
 tags:
 - Tensorflow
-- dl
-- note
+- Deep Learning
 date: 2021-11-13 20:00:00
-
 ---
 
-# Tensorflow Memo
+# Hands-on Tensorflow
 
 本篇博客主要用来记录我在学习使用Tensorflow的过程中的笔记、问题解决方案以及学习资源，仅供个人查阅参考。
 
