--- a/_posts/2021-09-05-git-memo.md
+++ b/_posts/2021-09-05-git-memo.md
@@ -1,11 +1,11 @@
 ---
-title: Git Memo
+title: [MEMO] Git
 tags:
 - git
 date: 2021-09-05 10:50:00
 ---
 
-# Git Memo
+# Hands-on Git
 
 本篇博客主要用于记录本人学习使用Git的笔记、问题解决方案以及学习资源，仅供个人参考学习使用。
 
