--- a/_posts/2021-09-05-git-memo.md
+++ b/_posts/2021-09-05-git-memo.md
@@ -17,6 +17,7 @@ date: 2021-09-05 10:50:00
 
 ```bash
 git branch -a
+git branch
 ```
 
 提交修改记录
@@ -50,6 +51,34 @@ git reset --soft HEAD^
 
 ```bash
 git reset HEAD .
+```
+
+解决git pull 碰到拒绝合并无关历史
+
+```bash
+git pull origin main --allow-unrelated-histories
+```
+
+创建分支
+
+```bash
+git branch dev
+```
+
+将main分支的内容合并到当前分支
+
+```bash
+git merge main
+```
+
+解决github代理问题
+
+```bash
+git config --global  --unset https.https://github.com.proxy
+git config --global  --unset http.https://github.com.proxy 
+
+git config --global --unset http.proxy
+git config --global --unset https.proxy
 ```
 
 ## 学习资源
