update: fix bug

--- a/_posts/2022-10-13-cql.md
+++ b/_posts/2022-10-13-cql.md
@@ -8,6 +8,7 @@ date: 2022-10-13 09:45:00
 
 # Conservative Q-Learning for Offline Reinforcement Learning
 
-> Kumar A, Zhou A, Tucker G, et al. Conservative q-learning for offline reinforcement learning[C]. NeurIPS, 2020, 33: 1179-1191.
+Kumar A, Zhou A, Tucker G, et al. Conservative q-learning for offline reinforcement learning[C]. NeurIPS, 2020, 33: 1179-1191.
 
 <!-- more -->
+
