--- a/_posts/2022-10-13-gail.md
+++ b/_posts/2022-10-13-gail.md
@@ -8,6 +8,6 @@ date: 2022-10-13 09:40:00
 
 # Generative Adversarial Imitation Learning
 
-> Ho J, Ermon S. Generative Adversarial Imitation Learning[C]. NeurIPS, 2016, 29: 4565--4573.
+Ho J, Ermon S. Generative Adversarial Imitation Learning[C]. NeurIPS, 2016, 29: 4565--4573.
 
 <!-- more -->
