--- a/_posts/2022-10-13-iqlearn.md
+++ b/_posts/2022-10-13-iqlearn.md
@@ -8,6 +8,6 @@ date: 2022-10-13 09:50:00
 
 # IQ-Learn: Inverse soft-Q Learning for Imitation
 
-> Garg D, Chakraborty S, Cundy C, et al. IQ-Learn: Inverse soft-Q Learning for Imitation[C]. NeurIPS, 2021, 34: 4028-4039.
+Garg D, Chakraborty S, Cundy C, et al. IQ-Learn: Inverse soft-Q Learning for Imitation[C]. NeurIPS, 2021, 34: 4028-4039.
 
 <!-- more -->
